--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,9 @@
     "express": "^4.21.1",
     "mongoose": "^8.7.0",
     "nodemailer": "^6.9.15"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/nodemailer": "^6.4.16"
   }
 }
