--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/nodemailer": "^6.4.16"
   }
 }
